# my-vscode-settings-python-dev

./: .editorconfig  .pre-commit-config.yaml  .sourcery.yaml  README.md  example-launch.json  example-workspace-settings.json  plugins.sh  pyproject.toml  setup.cfg  user-settings.json
lint-configs-python/python/: .isort.cfg  mypy.ini  pylintrc
